Animation FIXED!!
- no longer prompts horizontal scrollbar

--- a/css/globalStyle.css
+++ b/css/globalStyle.css
@@ -94,7 +94,7 @@ a:link:hover {
   border-radius: 10px;
 }
 .iFrame{
-  height: 85vh;
+  height: 84vh;
   width: 100%;
   border: none;
 }
